--- a/app/src/main/res/layout/snippet_searchbar.xml
+++ b/app/src/main/res/layout/snippet_searchbar.xml
@@ -2,45 +2,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-        <androidx.appcompat.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/profileToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/rectangular_border">
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/rectangular_round_searchbar"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+            <ImageView
+                android:id="@+id/searchicon"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_centerVertical="true"
+                android:layout_weight="0.25"
+                android:src="@drawable/ic_search_logo" />
+            <EditText
+                android:id="@+id/search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/searchicon"
 
-            android:id="@+id/profileToolbar">
+                android:layout_weight="2.5"
+                android:background="@null"
+                android:gravity="center"
 
+                android:hint="search username..."
+                android:maxLines="1"
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/ic_search_icon"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/searchicon"/>
-
-
-
-
-                <EditText
-                    android:layout_toRightOf="@id/searchicon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:hint="Search Username Here..."
-                    android:textColor="#000000"
-                    android:textSize="20sp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:id="@+id/search"
-                    android:background="@null"/>
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
 
-            </RelativeLayout>
-        </androidx.appcompat.widget.Toolbar>
 
+
+            <ImageView
+                android:id="@+id/cross"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/search"
+                android:layout_weight="0.25"
+                android:src="@drawable/ic_cross_black"
+                android:visibility="gone" />
+
+
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
 
 </merge>
