--- a/app/src/main/res/drawable-xhdpi/top_round_button.xml
+++ b/app/src/main/res/drawable-xhdpi/top_round_button.xml
@@ -12,7 +12,7 @@
                 android:color="@color/white"/>
             <stroke
 
-                android:color="@color/scheme8"
+                android:color="@color/black"
                 android:width="1dp"
 
                 />
