--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#f29492</color>
     <color name="colorPrimaryDark">#E3706E</color>
     <color name="colorAccent">#FF9800</color>
     <color name="white">#ffffff</color>
