--- a/app/src/main/res/layout/dialog_find_your_account.xml
+++ b/app/src/main/res/layout/dialog_find_your_account.xml
@@ -5,13 +5,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
-    app:cardCornerRadius="15dp">
+    android:background="@color/white"
+>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/layout_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1b1e3d"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp"
         >
@@ -22,7 +23,7 @@
             android:gravity="center"
             android:paddingTop="25dp"
             android:text="Find your account"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="28sp" />
 
         <TextView
@@ -32,7 +33,7 @@
             android:minLines="2"
             android:padding="2dp"
             android:text="Enter your email address linked to your account"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -40,11 +41,12 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
-            android:backgroundTint="@color/white"
+            android:background="@drawable/rectangular_border"
             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.@"
-            android:hint="E-mail / Mobile no."
+            android:hint="E-mail"
+            android:padding="10dp"
             android:inputType="textFilter"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="18sp">
 
