--- a/app/src/main/res/layout/activity_fragment_create_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_create_contest.xml
@@ -35,5 +35,14 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="end|bottom"
         android:layout_alignParentRight="true" />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NO CONTEST CREATED"
+        android:id="@+id/noPost"
+        android:visibility="gone"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="18sp"/>
 </RelativeLayout>
