--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -156,5 +156,14 @@ android:background="@color/white"
                 />
         </RelativeLayout>
     </LinearLayout>
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="NO POSTS TO SHOW"
+    android:id="@+id/noPost"
+    android:visibility="gone"
+    android:gravity="center"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
+    android:textSize="18sp"/>
 </RelativeLayout>
