--- a/app/src/main/res/layout-v21/activity_explore.xml
+++ b/app/src/main/res/layout-v21/activity_explore.xml
@@ -3,22 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
 
     <RelativeLayout
         android:id="@+id/relLayout1"
         android:layout_width="match_parent"
-        android:padding="10dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/pink_round_button"
-        android:layout_height="wrap_content">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/explore"
             android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="15dp"
             android:text="Explore"
 
@@ -26,20 +25,23 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/explore">
-        <include layout="@layout/snippet_searchbar" />
+
+            <include layout="@layout/snippet_searchbar" />
         </RelativeLayout>
 
     </RelativeLayout>
+
     <ListView
         android:id="@+id/listview"
-        android:layout_below="@+id/relLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible" />
+        android:layout_below="@+id/relLayout1"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -50,7 +52,6 @@
         <RelativeLayout
             android:id="@+id/contellation"
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false">
 
@@ -59,34 +60,37 @@
                 android:id="@+id/collapse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true">
+                android:layout_alignParentEnd="true"
+                android:nestedScrollingEnabled="false">
 
                 <include layout="@layout/layout_constellation" />
 
 
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_below="@id/collapse">
+                android:layout_below="@id/collapse"
+                android:layout_margin="5dp">
+
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
                     android:id="@+id/up"
-                    android:src="@drawable/ic_arrow_up"/>
-                <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_centerHorizontal="true"
-                    android:id="@+id/down"
-                    android:visibility="gone"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"/>
+                    android:src="@drawable/ic_arrow_up" />
+
+                <ImageView
+                    android:id="@+id/down"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_arrow_down"
+                    android:visibility="gone" />
 
             </RelativeLayout>
         </RelativeLayout>
@@ -101,9 +105,6 @@
                 android:id="@+id/topBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-
-
 
                 <LinearLayout
                     android:id="@+id/domain"
@@ -129,7 +130,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:entries="@array/domain2"
-                        android:text="All"
+                        android:text="Overall"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
 
@@ -156,6 +157,21 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="3" />
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+            <TextView
+                android:layout_below="@+id/topBar"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/noPost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="NO POSTS TO SHOW ¯\_(ツ)_/¯"
+                android:textStyle="bold"
+                android:textColor="@color/scheme8"
+                android:textSize="18sp"
+                android:visibility="gone"/>
         </RelativeLayout>
     </RelativeLayout>
 
