--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -60,11 +60,10 @@
         android:paddingBottom="5dp">
 
 
-
-
         <LinearLayout
             android:id="@+id/filter"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="400dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
@@ -81,6 +80,7 @@
                 android:id="@+id/sortedByTime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:maxLines="1"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:paddingLeft="10dp"
@@ -98,6 +98,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="Location"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="15.0sp" />
 
@@ -105,6 +106,7 @@
                 android:id="@+id/sortedByType"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:maxLines="1"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:paddingLeft="10dp"
@@ -117,6 +119,7 @@
                 android:id="@+id/sortedByDomain"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:maxLines="1"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:paddingLeft="10dp"
