--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,169 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/post_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/post_refresh">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:id="@+id/parent_scroll"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <ScrollView
+            android:id="@+id/parent_scroll"
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content">
+
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:id="@+id/l"
-
-                android:background="@drawable/pink_round_button"
 
                 android:layout_height="wrap_content">
-            <androidx.recyclerview.widget.RecyclerView
 
-                android:id="@+id/recyclerContest"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
+                <RelativeLayout
+                    android:id="@+id/l"
+                    android:layout_width="match_parent"
 
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/pink_round_button">
+
+                    <androidx.recyclerview.widget.RecyclerView
+
+                        android:id="@+id/recyclerContest"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"
+
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rel2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/l">
+
+                    <RelativeLayout
+                        android:id="@+id/domainRl"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/promo"
+                        android:layout_centerHorizontal="true">
+
+                        <ImageView
+                            android:id="@+id/domainBtn"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_star_black" />
+
+                        <ImageView
+                            android:id="@+id/domainBtnSel"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_star_color"
+                            android:visibility="gone" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/domainTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/domainRl"
+                        android:layout_centerHorizontal="true"
+                        android:text="All"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+
+                    <RelativeLayout
+                        android:id="@+id/promo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white">
+
+                        <include
+                            android:id="@+id/item"
+
+                            layout="@layout/promote_item" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerPromote"
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/item"
+
+                            android:nestedScrollingEnabled="false"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    </RelativeLayout>
+                </RelativeLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rel2"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+
+
+                    android:paddingBottom="50dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <ProgressBar
+                    android:id="@+id/pro2"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:visibility="visible" />
             </RelativeLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_below="@+id/l"
-    android:id="@+id/rel2"
-    android:layout_height="wrap_content">
-            <RelativeLayout
-                android:id="@+id/domainRl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/promo"
-                android:layout_centerHorizontal="true">
-
-                <ImageView
-                    android:id="@+id/domainBtn"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_star_black" />
-
-                <ImageView
-                    android:id="@+id/domainBtnSel"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_star_color"
-                    android:visibility="gone" />
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/domainTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/domainRl"
-                android:layout_centerHorizontal="true"
-                android:text="All"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-android:background="@color/white"
-                android:id="@+id/promo">
-
-                <include layout="@layout/promote_item"
-
-                    android:id="@+id/item"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerPromote"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:nestedScrollingEnabled="false"
-
-                android:layout_toRightOf="@+id/item"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-            </RelativeLayout>
-</RelativeLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/rel2"
-                android:paddingBottom="50dp"
-                android:clipToPadding="false"
-
-
-                android:nestedScrollingEnabled="false">
-
-            </androidx.recyclerview.widget.RecyclerView>
-            <ProgressBar
-                android:id="@+id/pro2"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:visibility="visible"
-                android:background="@android:color/transparent"
-                android:layout_centerHorizontal="true"
-              android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
-
-    </ScrollView>
+        </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <LinearLayout
+        android:id="@+id/pro"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:id="@+id/pro"
         android:background="#CC333232"
-        android:visibility="gone"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/white_border"
+            android:layout_gravity="center"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_gravity="center">
+            android:background="@drawable/white_border">
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                />
+                android:layout_marginLeft="10dp" />
+
             <TextView
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/progressBar"
                 android:layout_centerInParent="true"
-                android:textColor="@color/black"
+                android:layout_centerHorizontal="true"
                 android:text="Deleting..."
-                android:textSize="20sp"
-                />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
         </RelativeLayout>
     </LinearLayout>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="NO POSTS TO SHOW"
-    android:id="@+id/noPost"
-    android:visibility="gone"
-    android:gravity="center"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/noPost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:text="NO POSTS TO SHOW"
+        android:textSize="18sp"
+        android:visibility="gone" />
 </RelativeLayout>
