--- a/app/src/main/res/layout/fragment_viewprofile.xml
+++ b/app/src/main/res/layout/fragment_viewprofile.xml
@@ -49,7 +49,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/display_name"
+                        android:id="@+id/username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -497,15 +497,6 @@
 
             </RelativeLayout>
 
-            <!--            <View-->
-            <!--            android:id="@+id/line2"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="3dp"-->
-            <!--            android:layout_below="@id/profile_info"-->
-            <!--            android:layout_alignParentStart="true"-->
-            <!--            android:layout_alignParentEnd="true"-->
-            <!--            android:background="@color/white" />-->
-
             <!--        About               -->
             <LinearLayout
                 android:id="@id/linearLayout2"
@@ -513,8 +504,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/profile_info"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 android:weightSum="100">
 
@@ -523,7 +514,15 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:text="About"
+                    android:text="ABOUT"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/display_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
@@ -533,14 +532,6 @@
                     android:layout_height="wrap_content"
                     android:lineHeight="20sp"
                     android:maxLines="2" />
-
-                <TextView
-                    android:id="@+id/website"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textColor="#00BCD4"
-                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:id="@+id/share_skill_btn"
@@ -554,21 +545,20 @@
                     android:orientation="horizontal"
                     android:padding="5dp">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:paddingRight="15dp"
+                        android:text="Share Skill +"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+
                 </LinearLayout>
 
 
             </LinearLayout>
-
-            <!--            <View-->
-            <!--                android:id="@+id/line3"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="3dp"-->
-            <!--                android:layout_below="@id/linearLayout2"-->
-            <!--                android:layout_alignParentStart="true"-->
-            <!--                android:layout_alignParentEnd="true"-->
-            <!--                android:layout_marginTop="15dp"-->
-            <!--                android:layout_marginBottom="15dp"-->
-            <!--                android:background="@color/scheme8" />-->
 
             <!--        Image Grid          -->
             <androidx.recyclerview.widget.RecyclerView
